--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPC</title>
-    <script src=".js" defer></script>
+    <script src="rps.js" defer></script>
 </head>
 <body>
     <div id="container"></div>
